name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            Matt Sumner
license:             BSD3
license-file:        LICENSE
maintainer:          Me
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.8 && <4.9
                     , random == 1.1
                     , split == 0.2.2
  default-language:    Haskell2010
